--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 /* Import admin and website specific styles */
 @import "./styles/admin-input.css";
+@import "./styles/admin-output.css";
 
 /* Font imports */
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
